--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - GIT_AUTHOR_EMAIL=me@example.com
       - GIT_COMMITTER_NAME=Yanhao Yang
       - GIT_COMMITTER_EMAIL=me@example.com
+      - HOST_IP=192.168.56.1
     #labels:
       #- "traefik.frontend.rule=Host:ruby.localhost"
       #- "traefik.port=8000"
